# torchwnn

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: torchwnn-publish.yml
examples/: adult.py  airfoil_regression.py  ecoli.py  iris_bleaching.py  iris_filter.py  statlog.py
torchwnn/: classifiers.py  version.py
torchwnn/cpp/: functional.cpp
torchwnn/datasets/: airfoil.py
