[build-system]
requires = ["setuptools>=61.0", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "torchwnn"
description = "Torcwnn is a Python library for Weightless Neural Network"
readme = "README.md"
keywords = [    
  "wisard",
  "weithgless",
  "neural",
  "network",
]
license = "MIT"
maintainers = [
  { name = "Leandro Santiago de Araújo"},
]
dependencies = [
    "torch",
    "ucimlrepo",
    "scikit-learn",
    "pandas",
    "numpy",
]
